# massh

./: Cargo.toml  README.md
src/: config.rs  lib.rs  massh_client.rs  ssh_client.rs
src/assets/: index.html
src/assets/css/: app.css  chunk-vendors.css
src/assets/js/: app.js  app.js.map  chunk-vendors.js  chunk-vendors.js.map
vue/: package-lock.json  package.json  vue.config.js
vue/public/: index.html
vue/src/: App.vue  router.ts  store.ts
vue/src/components/: AppColor.vue  AppTheme.vue
vue/src/plugins/: vuetify.ts
vue/src/views/: Home.vue
